# apple-i18n

./: .gitignore  Localizable.example.xcstrings  README-ZH.md  README.md  config-example.yaml  main.py  pyproject.toml
apple_i8n/: cli.py  config.py  translator.py  xcstrings.py
